# xm32-vm

./: .gitignore  Cargo.toml  LICENSE  README.md  report.json
src/: assembler.rs  fibonacci.xasm  logger.rs  main.rs  screen.rs  vm.rs
