[package]
name = "xm32-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
env_logger = { features = [
  "auto-color",
], default-features = false, version = "0.10.1" }
log = "0.4.20"
